--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,7 +85,6 @@ html,
 body {
   max-width: 100vw;
   height: 100vh;
-  overflow: scroll;
 }
 
 #__next {
@@ -94,7 +93,7 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: #fff
+  background: #fff;
 }
 
 a {
